[curl] ASSERTION FAILED: !m_didNotifyResponse || m_multipartHandle https://bugs.webkit.org/show_bug.cgi?id=190895

Reviewed by Ross Kirsling.

An assertion was failing in CurlRequest::invokeDidReceiveResponse
because DidReceiveResponse was already dispatched. This condition
was met if CurlRequestScheduler::completeTransfer is called while
waiting for the reply for the first DidReceiveResponse.

No new tests, covered by existing tests.

* platform/network/curl/CurlRequest.h:
(WebCore::CurlRequest::needToInvokeDidReceiveResponse const):
Return true if m_didNotifyResponse is false disregard to
m_didReturnFromNotify.

Canonical link: https://commits.webkit.org/208718@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240958 268f45cc-cd09-0410-ab3c-d52691b4dbfc